<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/valorant"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="193dp"
        android:layout_height="34dp"
        android:layout_marginStart="109dp"
        android:layout_marginLeft="109dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="109dp"
        android:layout_marginRight="109dp"
        android:text="@string/game_reg"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/EditText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="168dp"
        android:layout_marginEnd="69dp"
        android:layout_marginRight="69dp"
        android:text="@string/game_name"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/EditText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:text="@string/age_group"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/agegroup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText3" />

    <TextView
        android:id="@+id/EditText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:text="@string/company_name"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/company"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText2" />

    <TextView
        android:id="@+id/EditText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="79dp"
        android:layout_marginRight="79dp"
        android:text="@string/type"
        android:textColor="@android:color/holo_red_light"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditText1" />

    <Button
        android:id="@+id/submit"
        android:layout_width="178dp"
        android:layout_height="70dp"
        android:layout_marginStart="117dp"
        android:layout_marginLeft="117dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="117dp"
        android:layout_marginRight="117dp"
        android:layout_marginBottom="152dp"
        android:text="@string/Submit"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agegroup" />

    <EditText
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:ems="10"
        android:hint="@string/enterName"
        android:inputType="textPersonName"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:ems="10"
        android:hint="@string/entertype"
        android:inputType="textPersonName"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/entercompany"
        android:inputType="textPersonName"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/type" />

    <EditText
        android:id="@+id/agegroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="37dp"
        android:layout_marginRight="37dp"
        android:ems="10"
        android:hint="@string/ageGrup"
        android:inputType="textPersonName"
        android:textColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/company" />

</androidx.constraintlayout.widget.ConstraintLayout>